AI made a whole credentials system